--- a/source/form.html
+++ b/source/form.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
 
-    <main class="page-main">
+    <main class="page-main feedback">
       <div class="page-main__title-inner">
         <h1 class="page-main__title">Вязание на заказ</h1>
       </div>
@@ -51,69 +51,105 @@
           <form class="order__form" action="https://echo.htmlacademy.ru" method="post">
             <fieldset class="order__set">
               <legend class="title-inner order__name">Тип</legend>
-              <label class="order__sign">
-                <input type="radio" name="radio-input" checked>
-                <span class="radio-box"></span>
-              Аксессуар для интерьера</label>
-              <label class="order__sign">
-                <input type="radio" name="radio-input">
-                <span class="radio-box"></span>
-              Детская игрушка</label>
+              <ul class="order__list order__type">
+                <li class="order__type-item">
+                  <label class="title-inner order__sign">
+                    <input type="radio" name="radio-input" checked>
+                    <span class="radio-box"></span>
+                  Аксессуар для интерьера</label>
+                </li>
+                <li class="order__type-item">
+                  <label class="title-inner order__sign">
+                    <input type="radio" name="radio-input">
+                    <span class="radio-box"></span>
+                  Детская игрушка</label>
+                </li>
+              </ul>
             </fieldset>
 
             <fieldset class="order__set">
               <legend class="title-inner order__name">Цвет</legend>
-              <label class="order__sign">
-                <input type="checkbox" name="check-input" checked>
-                <span class="check-box"></span>
-              Белый</label>
-              <label class="order__sign">
-                <input type="checkbox" name="check-input" checked>
-                <span class="check-box"></span>
-              Серый</label>
-              <label class="order__sign">
-                <input type="checkbox" name="check-input">
-                <span class="check-box"></span>
-              "Тиффани"</label>
-              <label class="order__sign">
-                <input type="checkbox" name="check-input">
-                <span class="check-box"></span>
-              Чёрный</label>
-              <label class="order__sign">
-                <input type="checkbox" name="check-input">
-                <span class="check-box"></span>
-              Розовый</label>
-              <label class="order__sign">
-                <input type="checkbox" name="check-input">
-                <span class="check-box"></span>
-              Оранжевый</label>
+              <ul class="order__list order__color">
+                <li class="order__color-item">
+                  <label class="title-inner order__sign">
+                    <input type="checkbox" name="check-input" checked>
+                    <span class="check-box"></span>
+                  Белый</label>
+                </li>
+                <li class="order__color-item">
+                  <label class="title-inner order__sign">
+                    <input type="checkbox" name="check-input" checked>
+                    <span class="check-box"></span>
+                  Серый</label>
+                </li>
+                <li class="order__color-item">
+                  <label class="title-inner order__sign">
+                    <input type="checkbox" name="check-input">
+                    <span class="check-box"></span>
+                  "Тиффани"</label>
+                </li>
+                <li class="order__color-item">
+                  <label class="title-inner order__sign">
+                    <input type="checkbox" name="check-input">
+                    <span class="check-box"></span>
+                  Чёрный</label>
+                </li>
+                <li class="order__color-item">
+                  <label class="title-inner order__sign">
+                    <input type="checkbox" name="check-input">
+                    <span class="check-box"></span>
+                  Розовый</label>
+                </li>
+                <li class="order__color-item">
+                  <label class="title-inner order__sign">
+                    <input type="checkbox" name="check-input">
+                    <span class="check-box"></span>
+                  Оранжевый</label>
+                </li>
+              </ul>
             </fieldset>
 
             <fieldset class="order__set">
               <legend class="title-inner order__name">ФИО</legend>
-              <label class="order__sign">Имя:
-                <input type="text" name="first-name" placeholder="Введите ваше имя*" required>
-              </label>
-              <label class="order__sign">Фамилия:
-                <input type="text" name="last-name" placeholder="Укажите фамилию*" required>
-              </label>
-              <label class="order__sign">Отчество:
-                <input type="text" name="patronymic" placeholder="Отчество, если желаете">
-              </label>
+              <ul class="order__list order__fullname">
+                <li>
+                  <label class="title-inner order__sign">Имя:
+                    <input type="text" name="first-name" placeholder="Введите ваше имя*" required>
+                  </label>
+                </li>
+                <li>
+                  <label class="title-inner order__sign">Фамилия:
+                    <input type="text" name="last-name" placeholder="Укажите фамилию*" required>
+                  </label>
+                </li>
+                <li>
+                  <label class="title-inner order__sign">Отчество:
+                    <input type="text" name="patronymic" placeholder="Отчество, если желаете">
+                  </label>
+                </li>
+              </ul>
             </fieldset>
 
             <fieldset class="order__set">
               <legend class="title-inner order__name">Тел</legend>
-              <label>
-                <input class="order__input order__input--tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
-              </label>
+              <ul class="order__list order__phone">
+                <li>
+                  <label>
+                    <input class="order__input order__input--tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+                  </label>
+                </li>
+              </ul>
             </fieldset>
 
             <fieldset class="order__set">
               <legend class="title-inner order__name">E-mail</legend>
-              <label>
-                <input class="order__input order__input--mail" type="email" name="mail" placeholder="Ваш Email*" required>
-              </label>
+              <ul class="order__list order__mail">
+                <li>
+                  <label>
+                    <input class="order__input order__input--mail" type="email" name="mail" placeholder="Ваш Email*" required>
+                  </label>
+                </li>
+              </ul>
             </fieldset>
 
             <fieldset class="order__set">
