--- a/source/form.html
+++ b/source/form.html
@@ -49,80 +49,72 @@
           </p>
 
           <form class="order__form" action="https://echo.htmlacademy.ru" method="post">
-            <fieldset class="order__set">
+            <fieldset class="order__field">
               <legend class="title-inner order__name">Тип</legend>
-              <ul class="order__list order__type">
-                <li class="order__type-item">
+              <ul class="order__set order-list">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="radio" name="radio-input" checked>
-                    <span class="radio-box"></span>
+                    <input class="order__input" type="radio" name="radio-input" checked>
                   Аксессуар для интерьера</label>
                 </li>
-                <li class="order__type-item">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="radio" name="radio-input">
-                    <span class="radio-box"></span>
+                    <input class="order__input" type="radio" name="radio-input">
                   Детская игрушка</label>
                 </li>
               </ul>
             </fieldset>
 
-            <fieldset class="order__set">
+            <fieldset class="order__field">
               <legend class="title-inner order__name">Цвет</legend>
-              <ul class="order__list order__color">
-                <li class="order__color-item">
+              <ul class="order__set order-list">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="checkbox" name="check-input" checked>
-                    <span class="check-box"></span>
+                    <input class="order__input" type="checkbox" name="check-input" checked>
                   Белый</label>
                 </li>
-                <li class="order__color-item">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="checkbox" name="check-input" checked>
-                    <span class="check-box"></span>
+                    <input class="order__input" type="checkbox" name="check-input" checked>
                   Серый</label>
                 </li>
-                <li class="order__color-item">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="checkbox" name="check-input">
-                    <span class="check-box"></span>
+                    <input class="order__input" type="checkbox" name="check-input">
                   "Тиффани"</label>
                 </li>
-                <li class="order__color-item">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="checkbox" name="check-input">
-                    <span class="check-box"></span>
+                    <input class="order__input" type="checkbox" name="check-input">
                   Чёрный</label>
                 </li>
-                <li class="order__color-item">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="checkbox" name="check-input">
-                    <span class="check-box"></span>
+                    <input class="order__input" type="checkbox" name="check-input">
                   Розовый</label>
                 </li>
-                <li class="order__color-item">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">
-                    <input type="checkbox" name="check-input">
-                    <span class="check-box"></span>
+                    <input class="order__input" type="checkbox" name="check-input">
                   Оранжевый</label>
                 </li>
               </ul>
             </fieldset>
 
-            <fieldset class="order__set">
+            <fieldset class="order__field">
               <legend class="title-inner order__name">ФИО</legend>
-              <ul class="order__list order__fullname">
-                <li>
+              <ul class="order__set order-list">
+                <li class="order-list__item">
                   <label class="title-inner order__sign">Имя:
                     <input type="text" name="first-name" placeholder="Введите ваше имя*" required>
                   </label>
                 </li>
-                <li>
+                <li class="order-list__item">
                   <label class="title-inner order__sign">Фамилия:
                     <input type="text" name="last-name" placeholder="Укажите фамилию*" required>
                   </label>
                 </li>
-                <li>
+                <li class="order-list__item">
                   <label class="title-inner order__sign">Отчество:
                     <input type="text" name="patronymic" placeholder="Отчество, если желаете">
                   </label>
@@ -130,35 +122,27 @@
               </ul>
             </fieldset>
 
-            <fieldset class="order__set">
+            <fieldset class="order__field">
               <legend class="title-inner order__name">Тел</legend>
-              <ul class="order__list order__phone">
-                <li>
-                  <label>
-                    <input class="order__input order__input--tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
-                  </label>
-                </li>
-              </ul>
+                <label>
+                  <input class="order__input order__input--tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+                </label>
             </fieldset>
 
-            <fieldset class="order__set">
+            <fieldset class="order__field">
               <legend class="title-inner order__name">E-mail</legend>
-              <ul class="order__list order__mail">
-                <li>
-                  <label>
-                    <input class="order__input order__input--mail" type="email" name="mail" placeholder="Ваш Email*" required>
-                  </label>
-                </li>
-              </ul>
+                <label>
+                  <input class="order__input order__input--mail" type="email" name="mail" placeholder="Ваш Email*" required>
+                </label>
             </fieldset>
 
-            <fieldset class="order__set">
+            <fieldset class="order__field">
               <legend class="title-inner order__name">Доп</legend>
               <textarea name="text" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </fieldset>
 
             <span class="order__note">*Поля обязательны для заполнения</span>
-            <button class="button" type="submit">Отправить заказ</button>
+            <button class="button order__button" type="submit">Отправить заказ</button>
           </form>
         </div>
       </section>
