--- a/source/index.html
+++ b/source/index.html
@@ -143,7 +143,7 @@
               <span class="contacts__label">e-mail:</span>
               <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
             </div>
-            <div class="contacts__address--wrap">
+            <div class="contacts__address-wrap">
               <span class="contacts__label">адрес:</span>
               <p class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
             </div>
@@ -154,7 +154,9 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6193253031113!2d30.32110961617598!3d59.938458669075104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2sBolshaya%20Konyushennaya%20St%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1585331824990!5m2!1sit!2sit"
             width="320" height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </figure>
-          <a class="button contacts__link" href="#">Напишите нам</a>
+          <div class="contacts__link-wrap">
+            <a class="button contacts__link" href="#">Напишите нам</a>
+          </div>
         </div>
       </section>
     </main>
