--- a/source/form.html
+++ b/source/form.html
@@ -47,20 +47,24 @@
           <p class="description-inner order__description">
             Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
           </p>
-
           <form class="order__form" action="https://echo.htmlacademy.ru" method="post">
+
             <fieldset class="order__field">
               <legend class="title-inner order__name">Тип</legend>
               <ul class="order__set order-list">
-                <li class="order-list__item">
+                <li class="order-list__item order-list__item--interior">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="radio" name="radio-input" checked>
-                  Аксессуар для интерьера</label>
+                    <span class="order__box order__box--radio"></span>
+                    Аксессуар для интерьера
+                  </label>
                 </li>
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="radio" name="radio-input">
-                  Детская игрушка</label>
+                    <span class="order__box order__box--radio"></span>
+                    Детская игрушка
+                  </label>
                 </li>
               </ul>
             </fieldset>
@@ -71,32 +75,44 @@
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="checkbox" name="check-input" checked>
-                  Белый</label>
+                    <span class="order__box order__box--check"></span>
+                    Белый
+                  </label>
                 </li>
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="checkbox" name="check-input" checked>
-                  Серый</label>
+                    <span class="order__box order__box--check"></span>
+                    Серый
+                  </label>
                 </li>
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="checkbox" name="check-input">
-                  "Тиффани"</label>
+                    <span class="order__box order__box--check"></span>
+                    "Тиффани"
+                  </label>
                 </li>
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="checkbox" name="check-input">
-                  Чёрный</label>
+                    <span class="order__box order__box--check"></span>
+                    Чёрный
+                  </label>
                 </li>
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="checkbox" name="check-input">
-                  Розовый</label>
+                    <span class="order__box order__box--check"></span>
+                    Розовый
+                  </label>
                 </li>
                 <li class="order-list__item">
                   <label class="title-inner order__sign">
                     <input class="order__input" type="checkbox" name="check-input">
-                  Оранжевый</label>
+                    <span class="order__box order__box--check"></span>
+                    Оранжевый
+                  </label>
                 </li>
               </ul>
             </fieldset>
@@ -104,35 +120,38 @@
             <fieldset class="order__field">
               <legend class="title-inner order__name">ФИО</legend>
               <ul class="order__set order-list">
-                <li class="order-list__item">
-                  <label class="title-inner order__sign">Имя:
-                    <input type="text" name="first-name" placeholder="Введите ваше имя*" required>
+                <li class="order-list__item order-list__item-user">
+                  <label class="title-inner order__sign order__sign-user">
+                    Имя:
+                    <input class="order__input-user" type="text" name="first-name" placeholder="Введите ваше имя*" required>
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="title-inner order__sign">Фамилия:
-                    <input type="text" name="last-name" placeholder="Укажите фамилию*" required>
+                <li class="order-list__item order-list__item-user">
+                  <label class="title-inner order__sign order__sign-user">
+                    Фамилия:
+                    <input class="order__input-user" type="text" name="last-name" placeholder="Укажите фамилию*" required>
                   </label>
                 </li>
-                <li class="order-list__item">
-                  <label class="title-inner order__sign">Отчество:
-                    <input type="text" name="patronymic" placeholder="Отчество, если желаете">
+                <li class="order-list__item order-list__item-user">
+                  <label class="title-inner order__sign order__sign-user">
+                    Отчество:
+                    <input class="order__input-user" type="text" name="patronymic" placeholder="Отчество, если желаете">
                   </label>
                 </li>
               </ul>
             </fieldset>
 
-            <fieldset class="order__field">
+            <fieldset class="order__field order__field-user">
               <legend class="title-inner order__name">Тел</legend>
                 <label>
-                  <input class="order__input order__input--tel" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+                  <input class="order__input-user" type="tel" name="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
                 </label>
             </fieldset>
 
-            <fieldset class="order__field">
+            <fieldset class="order__field order__field-user">
               <legend class="title-inner order__name">E-mail</legend>
                 <label>
-                  <input class="order__input order__input--mail" type="email" name="mail" placeholder="Ваш Email*" required>
+                  <input class="order__input-user" type="email" name="mail" placeholder="Ваш Email*" required>
                 </label>
             </fieldset>
 
