--- a/source/index.html
+++ b/source/index.html
@@ -48,12 +48,12 @@
           <h2 class="visually-hidden">Каталог товаров</h2>
           <ul class="catalog-main">
             <li class="catalog-main__item catalog-main__item--interior">
-              <a class="catalog-main__link" href="#">
+              <a class="catalog-main__link catalog-main__link--interior" href="#">
                 <h3 class="catalog-main__title">Предметы интерьера</h3>
               </a>
             </li>
             <li class="catalog-main__item catalog-main__item--toys">
-              <a class="catalog-main__link" href="#">
+              <a class="catalog-main__link catalog-main__link--toys" href="#">
                 <h3 class="catalog-main__title">Детские игрушки</h3>
               </a>
             </li>
@@ -115,7 +115,7 @@
         </div>
       </section>
 
-      <secton class="reviews">
+      <section class="reviews">
         <div class="wrapper">
           <h2 class="title-main title-main--reviews">Отзывы</h2>
             <blockquote class="reviews__block">
@@ -137,25 +137,26 @@
       </secton>
 
       <section class="contacts">
-        <div class="wrapper">
-          <h2 class="contacts__title">Контакты</h2>
-          <div class="contacts__mail">
-            <span class="contacts__label">e-mail:</span>
-            <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-          </div>
-          <div class="contacts__address-wrap">
-            <span class="contacts__label">адрес:</span>
-            <p class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
+        <div class="contacts__wrapper">
+          <div class="wrapper">
+            <h2 class="contacts__title">Контакты</h2>
+            <div class="contacts__mail">
+              <span class="contacts__label">e-mail:</span>
+              <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+            </div>
+            <div class="contacts__address-wrap">
+              <span class="contacts__label">адрес:</span>
+              <p class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
+            </div>
           </div>
 
-          <figure class="contacts__map">
-            <figcaption class="visually-hidden">Месторасположение нашего офиса на карте</figcaption>
-            <img src="../img/map-mobile@1x.jpg" width="320" height="457" alt="улица Большая Конюшенная, дом 19/8, офис 101">
-          </figure>
-          <div class="contacts__link-wrap">
-            <a class="button contacts__link" href="#">Напишите нам</a>
+            <div class="contacts__map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.32085871617607!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1587322655043!5m2!1sit!2sit" width="320" height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="contacts__link-wrap">
+              <a class="button contacts__link" href="#">Напишите нам</a>
+            </div>
           </div>
-        </div>
       </section>
     </main>
 
