--- a/source/index.html
+++ b/source/index.html
@@ -129,7 +129,7 @@
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек.
                 В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
               </p>
-              <cite>
+              <cite class="reviews__author">
                 <span class="reviews__author-name title-inner">Анастасия Красильникова</span>
                 <span class="reviews__author-nickname">@misssssiskras</span>
               </cite>
@@ -143,26 +143,28 @@
       </secton>
 
       <section class="contacts">
-        <div class="contacts__wrapper">
-          <div class="wrapper">
-            <h2 class="contacts__title">Контакты</h2>
-            <div class="contacts__mail">
-              <span class="contacts__label">e-mail:</span>
-              <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+        <div class="wrapper">
+          <div class="contacts__wrapper">
+            <div class="contacts__block">
+              <h2 class="contacts__title">Контакты</h2>
+              <div class="contacts__wrap contacts__wrap-mail">
+                <span class="contacts__label">e-mail:</span>
+                <a class="contacts__mail--link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+              </div>
+              <div class="contacts__wrap contacts__wrap-address">
+                <span class="contacts__label">адрес:</span>
+                <p class="contacts__address">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
+              </div>
             </div>
-            <div class="contacts__address-wrap">
-              <span class="contacts__label">адрес:</span>
-              <p class="contacts__address">г. Санкт-Петербург, ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
-            </div>
-          </div>
 
             <div class="contacts__map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.32085871617607!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1587322655043!5m2!1sit!2sit" width="320" height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>
-            <div class="contacts__link-wrap">
-              <a class="button contacts__link" href="#">Напишите нам</a>
+              <iframe class="contacts__iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.32085871617607!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sit!2sit!4v1587322655043!5m2!1sit!2sit"  height="457" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
           </div>
+          <div class="contacts__link-wrap">
+            <a class="button contacts__link" href="#">Напишите нам</a>
+          </div>
+        </div>
       </section>
     </main>
 
