--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <section class="catalog">
-        <div class="catalog__wrapper">
+        <div class="catalog-main__wrapper">
           <h2 class="visually-hidden">Каталог товаров</h2>
           <ul class="catalog-main">
             <li class="catalog-main__item catalog-main__item--interior">
@@ -96,8 +96,8 @@
       </section>
 
       <section class="advantages">
-        <div class="wrapper advantages__wrapper">
-          <h2 class="title-main title-main--advantages">Коротко о нас:</h2>
+        <div class="advantages__wrapper wrapper">
+          <h2 class="advantages__title title-main">Коротко о нас:</h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--ecology">
               <p>Экологически чистые материалы</p>
@@ -122,8 +122,8 @@
       </section>
 
       <section class="reviews">
-        <div class="wrapper reviews__wrapper">
-          <h2 class="title-main title-main--reviews">Отзывы</h2>
+        <div class="reviews__wrapper wrapper">
+          <h2 class="reviews__title title-main">Отзывы</h2>
             <blockquote class="reviews__block">
               <p class="reviews__description">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек.
@@ -138,9 +138,9 @@
               <button class="reviews__btn reviews__btn--prev" type="button" aria-label="Предыдущий отзыв"></button>
               <button class="reviews__btn reviews__btn--next" type="button" aria-label="Следующий отзыв"></button>
             </div>
-          <a class="button reviews__link" href="#">Написать</a>
+          <a class="reviews__link button" href="#">Написать</a>
         </div>
-      </secton>
+      </section>
 
       <section class="contacts">
         <div class="wrapper">
@@ -169,7 +169,7 @@
     </main>
 
     <footer class="page-footer feedback">
-      <div class="wrapper page-footer__wrapper">
+      <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo">
           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="101.615px" height="34.056px" viewBox="0 0 101.615 34.056" enable-background="new 0 0 101.615 34.056" xml:space="preserve">
             <g>
